Fix layout of notifications on small screens

--- a/src/styles/antd.less
+++ b/src/styles/antd.less
@@ -12,3 +12,44 @@
 .ant-form-item:last-child {
   margin-bottom: 0;
 }
+
+@media screen and (max-width: 575px) {
+  .ant-notification {
+    top: 0 !important;
+    left: 0 !important;
+    right: 0 !important;
+    width: auto;
+    max-width: none;
+    margin: 0;
+
+    &-notice {
+      border-radius: 0;
+    }
+  }
+
+  @keyframes NotificationFadeIn {
+    0% {
+      left: 0;
+      opacity: 0;
+      transform: translateY(-100%);
+    }
+    100% {
+      left: 0;
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+  @keyframes NotificationFadeOut {
+    0% {
+      left: 0;
+      opacity: 1;
+      transform: translateY(0);
+    }
+    100% {
+      left: 0;
+      opacity: 0;
+      transform: translateY(-100%);
+    }
+  }
+}
